--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
-<p>Hola Amigos esto es un estaco</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <title>Gestión Estanco</title>
+
+    <!-- Respomsive slider -->
+    <link href="responsive-calendar/0.9/css/responsive-calendar.css" rel="stylesheet">
+
+    <!-- Calendario -->
+    <meta name="distributor" content="Global" />
+    <meta itemprop="contentRating" content="General" />
+    <meta name="robots" content="All" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="description" content="The source of truly unique and awesome jquery plugins." />
+    <meta name="keywords" content="slider, carousel, responsive, swipe, one to one movement, touch devices, jquery, plugin, bootstrap compatible, html5, css3" />
+    <meta name="author" content="w3widgets.com">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Economica' rel='stylesheet' type='text/css'>
+</head>
+<body>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Gestión Estanco</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Inicio</a></li>
+                <li><a href="#">Tabaco</a></li>
+                <li><a href="#">Golosinas</a></li>
+                <li><a href="#">Papeleria</a></li>
+                <li><a href="#">Otros</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="jumbotron">
+    <div class="container text-center">
+        <h1>Gestión Estanco</h1>
+        <p>Expendiduría Nº1 Ibros</p>
+    </div>
+</div>
+<div class="col-sm-9">
+
+</div>
+
+<div class="col-sm-3 sidenav">
+    <ul class="nav nav-pills nav-stacked">
+
+        <!-- Responsive calendar - START -->
+        <div class="responsive-calendar">
+            <div class="controls">
+                <a class="pull-left" data-go="prev"><div class="btn btn-primary">Anterior</div></a>
+                <h4><span data-head-year></span> <span data-head-month></span></h4>
+                <a class="pull-right" data-go="next"><div class="btn btn-primary">Siguiente</div></a>
+            </div><hr/>
+            <div class="day-headers">
+                <div class="day header">L</div>
+                <div class="day header">M</div>
+                <div class="day header">X</div>
+                <div class="day header">J</div>
+                <div class="day header">V</div>
+                <div class="day header">S</div>
+                <div class="day header">D</div>
+            </div>
+            <div class="days" data-group="days">
+
+            </div>
+        </div>
+        <!-- Responsive calendar - END -->
+
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Buscar">
+            <span class="input-group-btn">
+          <button class="btn btn-default" type="button">
+            <span class="glyphicon glyphicon-search"></span>
+          </button>
+        </span>
+
+
+        </div>
+    </ul><br>
+</div>
+<script src="responsive-calendar/0.9/js/jquery.js"></script>
+<script src="responsive-calendar/0.9/js/bootstrap.min.js"></script>
+<script src="responsive-calendar/0.9/js/responsive-calendar.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $(".responsive-calendar").responsiveCalendar({
+            time: '',
+            events: {
+                "2013-04-30": {"number": 5, "url": "http://w3widgets.com/responsive-slider"},
+                "2013-04-26": {"number": 1, "url": "http://w3widgets.com"},
+                "2013-05-03":{"number": 1},
+                "2013-06-12": {}}
+        });
+    });
+</script>
+
+
+
+
+</body>
+</html>
