--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <meta name="author" content="w3widgets.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Economica' rel='stylesheet' type='text/css'>
+
+    <!-- Mi hoja de estilo -->
+    <link rel="stylesheet" href="styles/estilo1.css">
+
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -79,7 +83,6 @@
                 <div class="day header">D</div>
             </div>
             <div class="days" data-group="days">
-
             </div>
         </div>
         <!-- Responsive calendar - END -->
@@ -111,9 +114,6 @@
         });
     });
 </script>
-
-
-
 
 </body>
 </html>
