Añade "hover menu" y arregla un problema con el css

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/estilo2.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>Gestión Estanco</title>
 
-    <!-- Respomsive slider -->
+    <!-- Plugin para menu hover -->
+    <script src="js/bootstrap-hover-dropdown.min.js"></script>
+
+    <!--<link rel="stylesheet" href="styles/estilo2.css">-->
+
+    <!-- Responsive slider -->
     <link href="responsive-calendar/0.9/css/responsive-calendar.css" rel="stylesheet">
 
     <!-- Calendario -->
@@ -26,6 +30,7 @@
     <!-- Mi hoja de estilo -->
     <link rel="stylesheet" href="styles/estilo1.css">
 
+    <title>Gestión Estanco</title>
 </head>
 
 <body>
@@ -45,49 +50,47 @@
                     <li class="active"><a href="#">Inicio</a></li>
 
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tabaco<span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" href="#">Tabaco<b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="web/Tabaco/cigarrillos.html">Cigarrillos</a></li>
-                            <li><a href="web/Tabaco/liar.html">De Liar</a></li>
-                            <li><a href="web/Tabaco//puros.html">Puros</a></li>
+                            <li><a href="#">Cigarrillos</a></li>
+                            <li><a href="#">De Liar</a></li>
+                            <li><a href="#">Puros</a></li>
                         </ul>
                     </li>
 
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Golosinas<span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">Golosinas<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="web/Tabaco/cigarrillos.html">Cigarrillos</a></li>
-                            <li><a href="web/Tabaco/liar.html">De Liar</a></li>
-                            <li><a href="web/Tabaco//puros.html">Puros</a></li>
+                            <li><a href="#">Chicles</a></li>
+                            <li><a href="#">Patatas</a></li>
+                            <li><a href="#"></a></li>
                         </ul>
                     </li>
 
-
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Papelería<span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" href="#">Papelería<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="web/Tabaco/cigarrillos.html">Cigarrillos</a></li>
-                            <li><a href="web/Tabaco/liar.html">De Liar</a></li>
-                            <li><a href="web/Tabaco//puros.html">Puros</a></li>
+                            <li><a href="#">Cigarrillos</a></li>
+                            <li><a href="#">De Liar</a></li>
+                            <li><a href="#">Puros</a></li>
                         </ul>
                     </li>
 
-
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Otros<span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" href="#">Otros<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="web/Tabaco/cigarrillos.html">Cigarrillos</a></li>
-                            <li><a href="web/Tabaco/liar.html">De Liar</a></li>
-                            <li><a href="web/Tabaco//puros.html">Puros</a></li>
+                            <li><a href="#">Cigarrillos</a></li>
+                            <li><a href="#">De Liar</a></li>
+                            <li><a href="#">Puros</a></li>
                         </ul>
                     </li>
 
                     <li><a href="web/Contacto/contacto.html">Contacto</a></li>
-                </ul>˘
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    
-                    <li><!--<a href="/web/Login/login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
-                        <p class="text-center"><a href="#" class="btn btn-primary btn-lg" role="button" data-toggle="modal" data-target="#login-modal">Login</a></p>
+                    <li>
+                        <a href="#" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -186,7 +189,7 @@
 	</div>
     <!-- END # MODAL LOGIN -->
     
-    <div class="jumbotron">
+    <div class="jumbotron principal">
         <div class="container text-center">
             <h1><img src="img/logo.jpg"></h1>
         </div>
