Resuelto problema con el logo

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+                        <a href="#" data-toggle="modal" data-target="#login-modal">Login <span class="glyphicon glyphicon-log-in"></span></a>
                     </li>
                 </ul>
             </div>
@@ -191,7 +191,7 @@
     
     <div class="jumbotron principal">
         <div class="container text-center">
-            <h1><img src="img/logo.jpg"></h1>
+            <h1><img id="logo" src="img/logo.jpg"></h1>
         </div>
     </div>
     <div class="col-sm-9">
