Mapa del sitio ahora linkea de forma relativa

--- a/sitemapext.htm
+++ b/sitemapext.htm
@@ -11,25 +11,25 @@
 		<h2>Site Map</h2>
 		<div class="PrintingStyle" id="PrintStyleID" style="height:100%;width:100%">
 			<ul id="primaryNav" class="col7">
-				<li id="home"><a href="http://localhost:8081/gestanco/web/">Inicio</a></li>
-				<li class="first-child"><a href="http://localhost:8081/gestanco/web/productos.php">Productos</a></li>
-				<li><a href="http://localhost:8081/gestanco/web/contacto.php">Contacto</a></li>
-				<li><a href="http://localhost:8081/gestanco/web/localizacion.php">Localización</a></li>
-				<li><a href="http://localhost:8081/gestanco/web/tabaco.php">Tabaco</a>
+				<li id="home"><a href="index.php">Inicio</a></li>
+				<li class="first-child"><a href="productos.php">Productos</a></li>
+				<li><a href="contacto.php">Contacto</a></li>
+				<li><a href="localizacion.php">Localización</a></li>
+				<li><a href="tabaco.php">Tabaco</a>
 					<ul>
-						<li class="first-child"><a href="http://localhost:8081/gestanco/web/cigarrillos.php">Cigarrillos</a></li>
-						<li><a href="http://localhost:8081/gestanco/web/picadura.php">Picadura</a></li>
-						<li class="last-child"><a href="http://localhost:8081/gestanco/web/puros.php">Puros</a></li>
+						<li class="first-child"><a href="cigarrillos.php">Cigarrillos</a></li>
+						<li><a href="picadura.php">Picadura</a></li>
+						<li class="last-child"><a href="puros.php">Puros</a></li>
 					</ul>
 				</li>
-				<li><a href="http://localhost:8081/gestanco/web/comestibles.php">Comestibles</a>
+				<li><a href="comestibles.php">Comestibles</a>
 					<ul>
-						<li class="first-child"><a href="http://localhost:8081/gestanco/web/snacks.php">Snacks</a></li>
-						<li class="last-child"><a href="http://localhost:8081/gestanco/web/golosinas.php">Golosinas</a></li>
+						<li class="first-child"><a href="snacks.php">Snacks</a></li>
+						<li class="last-child"><a href="golosinas.php">Golosinas</a></li>
 					</ul>
 				</li>
-				<li><a href="http://localhost:8081/gestanco/web/papeleria.php">Papelería</a></li>
-				<li class="last-child"><a href="http://localhost:8081/gestanco/web/otros.php">Otros</a></li>
+				<li><a href="papeleria.php">Papelería</a></li>
+				<li class="last-child"><a href="otros.php">Otros</a></li>
 			</ul>
 		</div>
 	</body>
